data page spacing fix

--- a/src/renderer/components/DataCardsSection/styles.module.css
+++ b/src/renderer/components/DataCardsSection/styles.module.css
@@ -1,6 +1,6 @@
 .container {
     display: grid;
-  margin-left: 80px;
+  margin-left: 70px;
     grid-template-columns: repeat(3, 1fr);
   grid-gap: 120px 20px;
     grid-template-rows: repeat(2, 1fr);
