--- a/src/renderer/screens/Data/styles.module.css
+++ b/src/renderer/screens/Data/styles.module.css
@@ -28,7 +28,7 @@
 .description {
   margin-left: 80px;
   margin-right: 80px;
-  margin-bottom: 60px;
+  margin-bottom: 230px;
   margin-top: 100px;
 }
 
@@ -49,4 +49,8 @@
   font-family: 'Displace-Medium';
   font-size: 20px;
   line-height: 23px;
+}
+
+.sectionHeader {
+  margin-bottom: 30px;
 }
